WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158849
Fix macOS Sierra build
https://bugs.webkit.org/show_bug.cgi?id=158849
Summary
Fix macOS Sierra build
Anders Carlsson
Reported
2016-06-16 14:36:51 PDT
Fix macOS Sierra build
Attachments
Patch
(18.42 KB, patch)
2016-06-16 14:38 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-06-16 14:38:50 PDT
Created
attachment 281474
[details]
Patch
Anders Carlsson
Comment 2
2016-06-16 15:44:33 PDT
Committed
r202142
: <
http://trac.webkit.org/changeset/202142
>
Jon Lee
Comment 3
2016-06-18 12:03:00 PDT
Comment on
attachment 281474
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281474&action=review
> Source/WebKit2/Shared/mac/RemoteLayerBackingStore.mm:403 > +// layer.contents = (id)m_frontBuffer.surface->surface();
Is this correct?
Chris Dumez
Comment 4
2016-06-20 09:48:14 PDT
(In reply to
comment #3
)
> Comment on
attachment 281474
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=281474&action=review
> > > Source/WebKit2/Shared/mac/RemoteLayerBackingStore.mm:403 > > +// layer.contents = (id)m_frontBuffer.surface->surface(); > > Is this correct?
This commented line caused a 11% progression on JSBench / iOS. JSBench regressed by ~11% when Simon uncommented this line in
r202224
. No action is necessary, I just want to document this here.
Simon Fraser (smfr)
Comment 5
2016-06-20 10:20:34 PDT
That is interesting data!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug